--- a/Makefile.Library
+++ b/Makefile.Library
@@ -92,8 +92,6 @@ SRC_TEST_DIR	=	src_test
 CC = @CC@ 
 FC = @F77@
 
-coverage ?= false
-
 fortran ?= true
 
 CONFIG_STRING=@CONFIG_OPTIONS@
@@ -136,9 +134,7 @@ HDF_LIB     = @HDF_LIB@
 HDF_INC_DIR = @HDF_INC_DIR@
 HDF_LIB_DIR = @HDF_LIB_DIR@
 
-ifeq ($(coverage),true)
-COVERAGE_FLAG = -prof-gen=srcpos
-endif
+
 
 # Suffix rule to create the object files.
 # rules to automatically generate dependency makefiles
@@ -182,7 +178,6 @@ MILI_C_OBJS = \
     wrap_c.o \
     write_db.o \
     mr_funcs.o
-
 
 
 ifeq ($(fortran),true)                                                                                
@@ -259,8 +254,8 @@ opt:        LIB_PATH  = lib_opt/
 opt:        OBJS_PATH = objs_opt/
 opt:		mili_build
 
-debug:		CC_FLAGS  = @CC_FLAGS_DEBUG@ $(COVERAGE_FLAG)
-debug:		FC_FLAGS  = @FC_FLAGS_DEBUG@ $(COVERAGE_FLAG)
+debug:		CC_FLAGS  = @CC_FLAGS_DEBUG@
+debug:		FC_FLAGS  = @FC_FLAGS_DEBUG@
 debug:      LIB_PATH  = lib_debug/
 debug:      OBJS_PATH = objs_debug/
 debug:		mili_build
@@ -275,8 +270,8 @@ utilsopt:	$(XMOBJS)
 utilsopt:	MILI_UTILS_PATH = bin_utils_opt
 utilsopt:   md tipart MiliReader ti_strings makemili_driver xmilics
 
-utilsdebug:	CC_FLAGS  = @CC_FLAGS_DEBUG@ $(COVERAGE_FLAG)
-utilsdebug:	FC_FLAGS  = @FC_FLAGS_DEBUG@ $(COVERAGE_FLAG)
+utilsdebug:	CC_FLAGS  = @CC_FLAGS_DEBUG@
+utilsdebug:	FC_FLAGS  = @FC_FLAGS_DEBUG@
 utilsdebug: LIB_PATH  = lib_debug
 utilsdebug: OBJS_PATH = objs_debug/
 utilsopt:	mili_build 
